--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -1,3 +1,6 @@
+// Imports
+@import url("https://fonts.googleapis.com/css?family=Syncopate");
+
 // Variables
 @font-family: Syncopate;
 @red-color: #FF0000;
