--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -1,8 +1,19 @@
-// Imports
-@import url("https://fonts.googleapis.com/css?family=Syncopate");
+// FOUC-Fix syncopate-regular - latin //
+@font-face {
+    font-family: 'Syncopate';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../css/fonts/syncopate-v11-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Syncopate Regular'), local('Syncopate-Regular'),
+        url('../css/fonts/syncopate-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../css/fonts/syncopate-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../css/fonts/syncopate-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+        url('../css/fonts/syncopate-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../css/fonts/syncopate-v11-latin-regular.svg#Syncopate') format('svg'); /* Legacy iOS */
+}
 
 // Variables
-@font-family: Syncopate;
+@font-family: 'Syncopate';
 @red-color: #FF0000;
 
 body {
