--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -15,23 +15,41 @@
 // Variables
 @font-family: 'Syncopate';
 @red-color: #FF0000;
-@primary-color: #a4208e;
-@secondary-color: #fcf100;
-@tertiary-color: #00a35c;
+@primary-color: #cbbe00;
+@secondary-color: #66025c;
 
 body {
     font-family: @font-family;
-    background-color: @primary-color;
+    background-color: #eee;
 
     main {
-        color: @tertiary-color;
+        color: lighten(@primary-color, 7%);
         background-color: @secondary-color;
+        max-width: 1280px;
+        margin: auto;
+
         .playList {
+            margin: 0;
+            padding: 0;
+            position: relative;
+            -webkit-transition: -webkit-box-shadow 0.6s;
+            transition: box-shadow 0.6s, -webkit-box-shadow 0.6s;
+            border-radius: 2px;
+            height: 100%;
+
             li {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 10px;
+                margin-bottom: 1px;
                 cursor: pointer;
                 margin-left: auto;
                 margin-right: auto;
-                margin-bottom: 20px;
+                border: 2px solid transparent;
+                box-shadow: 0 0 0 1px @secondary-color inset, 1px 1px 3px 2px @secondary-color inset;
+                box-sizing: border-box;
+                transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
                 &:before, &:after {
                     -webkit-box-sizing: inherit;
@@ -45,7 +63,11 @@ body {
                 }
 
                 &:hover {
-                    background: #8e8e8e;
+                    background-color: @primary-color;
+                    color: @secondary-color;
+                    border: 2px dashed @secondary-color;
+                    text-shadow: -1px -1px lighten(@secondary-color, 10%);
+                    transition: text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
                 }
 
                 div {
@@ -60,6 +82,21 @@ body {
                     right: auto;
                 }
             }
+
+
+                li.active {
+                    background-color: lighten(@primary-color, 7%);
+                    color: @secondary-color;
+                    box-shadow: 0 0 0 1px lighten(@primary-color, 7%) inset, 1px 1px 3px 2px @secondary-color inset;
+                    text-shadow: -1px -1px lighten(@secondary-color, 10%);
+                    border: 2px solid transparent;
+                    box-sizing: border-box;
+                    transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+
+                    &:hover {
+                        border: 2px solid transparent;
+                    }
+                }
         }
     }
 
@@ -125,16 +162,16 @@ html {
 @media only screen and (min-width: 601px) {
     body {
         main {
-        .playList {
-            li {
-                div {
-                    width: 25%;
-                    margin-left: auto;
-                    left: auto;
-                    right: auto;
+            .playList {
+                li {
+                    div {
+                        width: 25%;
+                        margin-left: auto;
+                        left: auto;
+                        right: auto;
+                    }
                 }
             }
-        }
         }
     }
 
