--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -14,89 +14,105 @@
 
 // Variables
 @font-family: 'Syncopate';
-@red-color: #FF0000;
+
+// yellow primary-color
 @primary-color: #cbbe00;
+
+// purple secondary-color
 @secondary-color: #66025c;
 
 body {
-    font-family: @font-family;
     background-color: #eee;
+    font-family: @font-family;
 
     main {
-        color: lighten(@primary-color, 7%);
         background-color: @secondary-color;
-        max-width: 1280px;
+        color: lighten(@primary-color, 7%);
         margin: auto;
+        max-width: 1280px;
 
         .playList {
+            border-radius: 3px;
+            height: 100%;
             margin: 0;
             padding: 0;
             position: relative;
-            -webkit-transition: -webkit-box-shadow 0.6s;
             transition: box-shadow 0.6s, -webkit-box-shadow 0.6s;
-            border-radius: 2px;
-            height: 100%;
+            -webkit-transition: -webkit-box-shadow 0.6s;
 
             li {
-                display: flex;
-                justify-content: center;
                 align-items: center;
-                padding: 10px;
-                margin-bottom: 1px;
-                cursor: pointer;
-                margin-left: auto;
-                margin-right: auto;
+                background-color: @secondary-color;
                 border: 2px solid transparent;
+                border-radius: 3px;
                 box-shadow: 0 0 0 1px @secondary-color inset, 1px 1px 3px 2px @secondary-color inset;
                 box-sizing: border-box;
+                cursor: pointer;
+                display: flex;
+                justify-content: center;
+                margin-bottom: 1px;
+                margin-left: auto;
+                margin-right: auto;
+                padding: 10px;
                 transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
                 &:before, &:after {
-                    -webkit-box-sizing: inherit;
                     box-sizing: inherit;
+                    -webkit-box-sizing: inherit;
                 }
 
                 &:after {
+                    clear: both;
                     content: "";
                     display: table;
-                    clear: both;
                 }
 
                 &:hover {
                     background-color: @primary-color;
-                    color: @secondary-color;
                     border: 2px dashed @secondary-color;
+                    color: @secondary-color;
                     text-shadow: -1px -1px lighten(@secondary-color, 10%);
                     transition: text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+
+                    &:not(.active) {
+                        animation: border-dance 1s infinite linear;
+                        background: linear-gradient(90deg,  @secondary-color 50%, @primary-color 50%), linear-gradient(90deg,  @secondary-color 50%, @primary-color 50%), linear-gradient(0deg,  @secondary-color 50%, @primary-color 50%), linear-gradient(0deg,  @secondary-color 50%, @primary-color 50%);
+                        background-color: @primary-color;
+                        background-position: left top, right bottom, left bottom, right   top;
+                        background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+                        background-size: 15px 4px, 15px 4px, 4px 15px, 4px 15px;
+                        border: 2px solid @secondary-color;
+                        color: @secondary-color;
+                    }
                 }
 
                 div {
-                    float: left;
-                    -webkit-box-sizing: border-box;
                     box-sizing: border-box;
-                    padding: 0 0.75rem;
-                    min-height: 1px;
-                    width: 50%;
-                    margin-left: auto;
+                    float: left;
                     left: auto;
+                    margin-left: auto;
+                    min-height: 1px;
+                    padding: 0 0.75rem;
                     right: auto;
+                    -webkit-box-sizing: border-box;
+                    width: 50%;
                 }
             }
 
 
-                li.active {
-                    background-color: lighten(@primary-color, 7%);
-                    color: @secondary-color;
-                    box-shadow: 0 0 0 1px lighten(@primary-color, 7%) inset, 1px 1px 3px 2px @secondary-color inset;
-                    text-shadow: -1px -1px lighten(@secondary-color, 10%);
-                    border: 2px solid transparent;
-                    box-sizing: border-box;
-                    transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+            li.active {
+                background-color: lighten(@primary-color, 7%);
+                border: 2px solid transparent;
+                box-shadow: 0 0 0 1px lighten(@primary-color, 7%) inset, 1px 1px 3px 2px @secondary-color inset;
+                box-sizing: border-box;
+                color: @secondary-color;
+                text-shadow: -1px -1px lighten(@secondary-color, 10%);
+                transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
-                    &:hover {
-                        border: 2px solid transparent;
-                    }
+                &:hover {
+                    border: 2px solid transparent;
                 }
+            }
         }
     }
 
@@ -107,47 +123,47 @@ body {
 
 //fouc-fix
 html {
-    visibility: visible;
     opacity: 1;
+    visibility: visible;
 }
 
 // Materialize CSS styles
 .row {
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
 
     &:before, &:after {
-        -webkit-box-sizing: inherit;
         box-sizing: inherit;
+        -webkit-box-sizing: inherit;
     }
 
     &:after {
+        clear: both;
         content: "";
         display: table;
-        clear: both;
     }
 
     .col {
-        float: left;
-        -webkit-box-sizing: border-box;
         box-sizing: border-box;
-        padding: 0 0.75rem;
+        float: left;
         min-height: 1px;
+        padding: 0 0.75rem;
+        -webkit-box-sizing: border-box;
     }
 
     .col.s6 {
-        width: 50%;
-        margin-left: auto;
         left: auto;
+        margin-left: auto;
         right: auto;
+        width: 50%;
     }
 
     .col.s12 {
-        width: 100%;
-        margin-left: auto;
         left: auto;
+        margin-left: auto;
         right: auto;
+        width: 100%;
     }
 }
 
@@ -158,6 +174,17 @@ html {
     }
 }
 
+// Keyframes
+@keyframes border-dance {
+    0% {
+        background-position: left top, right bottom, left bottom, right   top;
+    }
+
+    100% {
+        background-position: left 15px top, right 15px bottom, left bottom 15px, right   top 15px;
+    }
+}
+
 // media queries
 @media only screen and (min-width: 601px) {
     body {
@@ -165,10 +192,10 @@ html {
             .playList {
                 li {
                     div {
-                        width: 25%;
-                        margin-left: auto;
                         left: auto;
+                        margin-left: auto;
                         right: auto;
+                        width: 25%;
                     }
                 }
             }
@@ -177,24 +204,24 @@ html {
 
     .row {
         .col.m3 {
-            width: 25%;
-            margin-left: auto;
             left: auto;
+            margin-left: auto;
             right: auto;
+            width: 25%;
         }
 
         .col.m6 {
-            width: 50%;
-            margin-left: auto;
             left: auto;
+            margin-left: auto;
             right: auto;
+            width: 50%;
         }
 
         .col.m12 {
-            width: 100%;
-            margin-left: auto;
             left: auto;
+            margin-left: auto;
             right: auto;
+            width: 100%;
         }
     }
 }
