--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -21,6 +21,16 @@
 // purple secondary-color
 @secondary-color: #66025c;
 
+// Keyframes
+@keyframes border-dance {
+    0% {
+        background-position: left top, right bottom, left bottom, right   top;
+    }
+
+    100% {
+        background-position: left 15px top, right 15px bottom, left bottom 15px, right   top 15px;
+    }
+}
 body {
     background-color: #eee;
     font-family: @font-family;
@@ -36,11 +46,8 @@ body {
             height: 100%;
             margin: 0;
             padding: 0;
-            position: relative;
-            transition: box-shadow 0.6s, -webkit-box-shadow 0.6s;
-            -webkit-transition: -webkit-box-shadow 0.6s;
 
-            li {
+            li:extend(.row) {
                 align-items: center;
                 background-color: @secondary-color;
                 border: 2px solid transparent;
@@ -48,12 +55,9 @@ body {
                 box-shadow: 0 0 0 1px @secondary-color inset, 1px 1px 3px 2px @secondary-color inset;
                 box-sizing: border-box;
                 cursor: pointer;
-                display: flex;
                 justify-content: center;
                 margin-bottom: 1px;
-                margin-left: auto;
-                margin-right: auto;
-                padding: 10px;
+                padding: 15px 10px 10px 10px;
                 transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
                 &:before, &:after {
@@ -80,7 +84,7 @@ body {
                         background-color: @primary-color;
                         background-position: left top, right bottom, left bottom, right   top;
                         background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
-                        background-size: 15px 4px, 15px 4px, 4px 15px, 4px 15px;
+                        background-size: 15px 4px, 15px 3px, 4px 15px, 3px 15px;
                         border: 2px solid @secondary-color;
                         color: @secondary-color;
                     }
@@ -88,14 +92,10 @@ body {
 
                 div {
                     box-sizing: border-box;
-                    float: left;
-                    left: auto;
-                    margin-left: auto;
-                    min-height: 1px;
-                    padding: 0 0.75rem;
-                    right: auto;
+                    flex: 0 0 auto;
+                    flex-basis: 50%;
+                    max-width: 50%;
                     -webkit-box-sizing: border-box;
-                    width: 50%;
                 }
             }
 
@@ -121,107 +121,77 @@ body {
     }
 }
 
+// flexboxgrid styles
+.flex-col(@size) {
+    flex-basis: ((@size / 12) * 100%);
+    max-width: ((@size / 12) * 100%);
+}
+
+.row {
+    display: flex;
+    flex: 0 1 auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.col {
+    flex: 0 0 auto;
+}
+
+.m2 {
+    .flex-col(2);
+}
+
+.m4 {
+    .flex-col(4);
+}
+
+
+.sm3, .m3 {
+    .flex-col(3);
+}
+
+.sm6 {
+    .flex-col(6);
+}
+
+.sm9 {
+    .flex-col(9);
+}
+
 //fouc-fix
 html {
     opacity: 1;
     visibility: visible;
 }
 
-// Materialize CSS styles
-.row {
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-
-    &:before, &:after {
-        box-sizing: inherit;
-        -webkit-box-sizing: inherit;
-    }
-
-    &:after {
-        clear: both;
-        content: "";
-        display: table;
-    }
-
-    .col {
-        box-sizing: border-box;
-        float: left;
-        min-height: 1px;
-        padding: 0 0.75rem;
-        -webkit-box-sizing: border-box;
-    }
-
-    .col.s6 {
-        left: auto;
-        margin-left: auto;
-        right: auto;
-        width: 50%;
-    }
-
-    .col.s12 {
-        left: auto;
-        margin-left: auto;
-        right: auto;
-        width: 100%;
-    }
-}
-
-.col {
-    .row {
-        margin-left: -0.75rem;
-        margin-right: -0.75rem;
-    }
-}
-
-// Keyframes
-@keyframes border-dance {
-    0% {
-        background-position: left top, right bottom, left bottom, right   top;
-    }
-
-    100% {
-        background-position: left 15px top, right 15px bottom, left bottom 15px, right   top 15px;
-    }
-}
-
 // media queries
-@media only screen and (min-width: 601px) {
+@media screen and (min-width: 601px) {
     body {
         main {
             .playList {
                 li {
-                    div {
-                        left: auto;
-                        margin-left: auto;
-                        right: auto;
-                        width: 25%;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+
+                    div:extend(.col) {
                     }
+
+                    div.m2 {
+                        .m2;
+                    }
+
+                    div.m3 {
+                        .m3;
+                    }
+
+                    div.m4 {
+                        .m4;
+                    }
+
                 }
             }
-        }
-    }
-
-    .row {
-        .col.m3 {
-            left: auto;
-            margin-left: auto;
-            right: auto;
-            width: 25%;
-        }
-
-        .col.m6 {
-            left: auto;
-            margin-left: auto;
-            right: auto;
-            width: 50%;
-        }
-
-        .col.m12 {
-            left: auto;
-            margin-left: auto;
-            right: auto;
-            width: 100%;
         }
     }
 }
