--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -7,12 +7,28 @@
   src: local('Syncopate Regular'), local('Syncopate-Regular'), url('../css/fonts/syncopate-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../css/fonts/syncopate-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */ url('../css/fonts/syncopate-v11-latin-regular.woff') format('woff'), /* Modern Browsers */ url('../css/fonts/syncopate-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */ url('../css/fonts/syncopate-v11-latin-regular.svg#Syncopate') format('svg');
   /* Legacy iOS */
 }
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../css/fonts/iconfont/MaterialIcons-Regular.eot');
+  /* For IE6-8 */
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url('../css/fonts/iconfont/MaterialIcons-Regular.woff2') format('woff2'), url('../css/fonts/iconfont/MaterialIcons-Regular.woff') format('woff'), url('../css/fonts/iconfont/MaterialIcons-Regular.ttf') format('truetype');
+}
 @keyframes border-dance {
   0% {
     background-position: left top, right bottom, left bottom, right   top;
   }
   100% {
     background-position: left 15px top, right 15px bottom, left bottom 15px, right   top 15px;
+  }
+}
+@keyframes rotate-dance {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 body {
@@ -53,18 +69,18 @@ body main .playList li:after {
   content: "";
   display: table;
 }
-body main .playList li:hover {
+body main .playList li:not(.controls):hover {
   background-color: #cbbe00;
   border: 2px dashed #34012f;
   color: #34012f;
   text-shadow: -1px -1px #66025c;
   transition: text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
-body main .playList li:hover:not(.active) {
+body main .playList li:not(.controls):hover:not(.active) {
   animation: border-dance 1s infinite linear;
   background: linear-gradient(90deg, #34012f 50%, #cbbe00 50%), linear-gradient(90deg, #34012f 50%, #cbbe00 50%), linear-gradient(0deg, #34012f 50%, #cbbe00 50%), linear-gradient(0deg, #34012f 50%, #cbbe00 50%);
   background-color: #cbbe00;
-  background-position: left top, right bottom, left bottom, right   top;
+  background-position: left top, right bottom, left bottom, right top;
   background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
   background-size: 15px 4px, 15px 3px, 4px 15px, 3px 15px;
   border: 2px solid #cbbe00;
@@ -76,18 +92,57 @@ body main .playList li div {
 }
 body main .playList li.active {
   background-color: #efdf00;
-  border: 2px solid transparent;
-  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #34012f inset;
+  border: 2px solid #cbbe00;
+  box-shadow: 0 0 0 1px #34012f inset, 1px 1px 3px 2px #34012f inset;
   box-sizing: border-box;
   color: #34012f;
   text-shadow: -1px -1px #66025c;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 body main .playList li.active:hover {
-  border: 2px solid transparent;
+  border: 2px outset #cbbe00;
+}
+body main .playList li.controls .material-icons {
+  border: 1px solid transparent;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #34012f inset;
+  text-shadow: -1px -1px #66025c;
+  transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
+body main .playList li.controls:hover .material-icons {
+  background-color: #efdf00;
+  border: 1px solid #34012f;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #34012f inset;
+  box-sizing: border-box;
+  color: #34012f;
+  text-shadow: -1px -1px #66025c;
+  transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 body #playListData {
   display: none;
+}
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
 .row,
 body main .playList li {
@@ -106,6 +161,11 @@ body main .playList li {
 .m4 {
   flex-basis: 33.33333333%;
   max-width: 33.33333333%;
+}
+.sm1,
+.m1 {
+  flex-basis: 8.33333333%;
+  max-width: 8.33333333%;
 }
 .sm3,
 .m3 {
@@ -129,6 +189,10 @@ html {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+  body main .playList li div.m1 {
+    flex-basis: 8.33333333%;
+    max-width: 8.33333333%;
   }
   body main .playList li div.m2 {
     flex-basis: 16.66666667%;
