--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -109,9 +109,9 @@ body main .playList li.controls .material-icons {
   text-shadow: -1px -1px #66025c;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
-body main .playList li.controls:hover .material-icons {
+body main .playList li.controls .material-icons:hover {
   background-color: #efdf00;
-  border: 1px solid #34012f;
+  border: 1px inset #34012f;
   border-radius: 50%;
   box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #34012f inset;
   box-sizing: border-box;
