--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -125,7 +125,6 @@ body {
                 }
             }
 
-
             li.active {
                 background-color: @primary-color-light;
                 border: 2px solid @primary-color;
@@ -147,11 +146,10 @@ body {
                     box-shadow: 0 0 0 1px @primary-color-light inset, 1px 1px 3px 2px @secondary-color inset;
                     text-shadow: -1px -1px @secondary-color-light;
                     transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-                }
-                &:hover {
-                    .material-icons {
+
+                    &:hover {
                         background-color: @primary-color-light;
-                        border: 1px solid @secondary-color;
+                        border: 1px inset @secondary-color;
                         border-radius: 50%;
                         box-shadow: 0 0 0 1px @primary-color-light inset, 1px 1px 3px 2px @secondary-color inset;
                         box-sizing: border-box;
